added git header, started 2e

--- a/report/main.tex
+++ b/report/main.tex
@@ -51,6 +51,8 @@ pdfauthor = {Frans de Boer}
 \begin{document} %All text i dokumentet hamnar mellan dessa taggar, allt ovanför är formatering av dokumentet
 \maketitle
 
+The git repository for this assignment (including code and the report) can be found at github.com. I will make this repository public after the Brightspace deadline has passed.
+
 \section{PAC Learning}
 
 \subsection{Extend the proof that was given in the slides for the PAC-learnability of hyper-rectangles:
@@ -174,5 +176,8 @@ So the upper-bound on the maximum number of different labels a data set of size 
 
 \subsection{Using the bound from Exercise 3.d, determine the smallest upper-bound on the VC-dimension for decision stumps for dimensionalities $d ∈ \{1, 2, 3, 4, 5, 6, 7, 8, 1024, 2100\}$}
 \label{sec:3e}
+\textbf{VC-Dimension}: The largest number of nodes $N$ that a classifier can shatter in all possible $2^N$ ways.
+
+in d=1 2? in d=2 2?
 
 \end{document}
