--- a/report/main.tex
+++ b/report/main.tex
@@ -164,11 +164,38 @@ This continues for each dimension added, so we end up with a total of $2Nd$ maxi
     \label{fig:d2n3}
 \end{figure}
 
+I'd like to add some more notes to this solution. This is not neccesary to read, but it sheds some light on the work I did for this question and some of the mistakes I made. 
+
+While trying to answer this question I pretty quickly came to the answer of $2Nd$, but then later thought it to be wrong because this formula does not take into account duplicate labelings. In Figure \ref{fig:d2n3} for example the x and y decision stumps can create many duplicate label assignments. 
+
+I tried to find patterns in combinations of $N$ and $d$, for example I noticed that for $d=2$ only $N \leq 3$ was solvable (see Figure \ref{fig:d2n3_solvable}), and for $d=3$ at least $N \leq 4$ was solvable (see Figure \ref{fig:d3n4_solvable}, here smaller circles can be seen as being further away in the z dimension). 
+
+From here it seemed like there was a pattern where for any $N \leq (d+1)$ the problem was fully solvable, so the number of possible labelings the decision stump could make was $2^N$. I could however not find a pattern in the number of labelings a decision stump could make for problems with $N > (d+1)$.
+
+\begin{figure}[h]
+    \caption{Solvable example with $d=2$ and $N=3$}
+    \centering
+    \includegraphics[width=0.5\textwidth]{d2n3_solvable.png}
+    \label{fig:d2n3_solvable}
+\end{figure}
+
+\begin{figure}[h]
+    \caption{Solvable example with $d=3$ and $N=4$}
+    \centering
+    \includegraphics[width=0.5\textwidth]{d3n4_solvable.png}
+    \label{fig:d3n4_solvable}
+\end{figure}
+
+
+It was not until a day of thinking and researching that I found these \href{https://people.csail.mit.edu/alinush/6.867-fall-2013/2013.10.22.w8.tu-lecture-13-generalization-part-2.pdf}{Slides} (Page 5) that confirmed my original answer.
 
 \subsection{Using the bound from Exercise 3.d, determine the smallest upper-bound on the VC-dimension for decision stumps for dimensionalities $d ∈ \{1, 2, 3, 4, 5, 6, 7, 8, 1024, 2^{100}\}$}
 \label{sec:3e}
+I used the definition from the book \textit{Foundations of Machine Learning} \cite{foundations_of_machine_learning} for the upper-bound on the VC-Dimension
 \textbf{VC-Dimension}: The largest number of nodes $N$ that a classifier can shatter in all possible $2^N$ ways for any possible data set.
 \textbf{Smallest upper-bound}: First size $N$ in dimension $d$ where decision stumps cannot shatter any data set
 
+\bibliographystyle{plain}
+\bibliography{refs}
 
 \end{document}
