--- a/report/main.tex
+++ b/report/main.tex
@@ -199,18 +199,20 @@ Since we know the maximum number of different labelings a data set of size $N$ i
 Since I could not find an analytical solution to this I decided to solve it programmatically. The results can be seen in Table \ref{tab:upper-bound-vc}.
 
 \begin{table}
-    \begin{tabular}{cc}
-    Dimensionality & Upper-bound on VC-Dimension \\
-    1              & 2                            \\
-    2              & 4                            \\
-    3              & 4                            \\
-    4              & 5                            \\
-    5              & 5                            \\
-    6              & 6                            \\
-    7              & 6                           \\
-    8              & 6                            \\
-    1024           & 14                            \\
-    $2^{100}$        & 107                           
+    \begin{tabular}{|c|c|}
+    \hline
+    Dimensionality & Upper-bound on VC-Dimension \\ \hline
+    1              & 2                            \\ \hline
+    2              & 4                            \\ \hline
+    3              & 4                            \\ \hline
+    4              & 5                            \\ \hline
+    5              & 5                            \\ \hline
+    6              & 6                            \\ \hline
+    7              & 6                           \\ \hline
+    8              & 6                            \\ \hline
+    1024           & 14                            \\ \hline
+    $2^{100}$        & 107 \\
+    \hline
     \end{tabular}
     \label{tab:upper-bound-vc}
 \end{table}
