added caption to table

--- a/report/main.tex
+++ b/report/main.tex
@@ -198,7 +198,7 @@ Since we know the maximum number of different labelings a data set of size $N$ i
 
 Since I could not find an analytical solution to this I decided to solve it programmatically. The results can be seen in Table \ref{tab:upper-bound-vc}.
 
-\begin{table}
+\begin{table*}
     \begin{tabular}{|c|c|}
     \hline
     Dimensionality & Upper-bound on VC-Dimension \\ \hline
@@ -214,8 +214,9 @@ Since I could not find an analytical solution to this I decided to solve it prog
     $2^{100}$        & 107 \\
     \hline
     \end{tabular}
+    \caption{Results for upper bounds on the VC Dimension}
     \label{tab:upper-bound-vc}
-\end{table}
+\end{table*}
 
 To me one interesting thing about these results is that they did not seem to agree with some other results I had found online. \href{https://people.csail.mit.edu/alinush/6.867-fall-2013/2013.10.22.w8.tu-lecture-13-generalization-part-2.pdf}{These slides} mentions the growth should be proportional to $\log(d)$, which it is. But \href{http://courses.cms.caltech.edu/cs253/hw/hw2.pdf}{This homework assignment} gives an upper bound on the VC dimension of $2(\log_2(d) + 1)$. 
 
