renamed files, made can_shatter for 2f

--- a/report/main.tex
+++ b/report/main.tex
@@ -221,6 +221,14 @@ Since I could not find an analytical solution to this I decided to solve it prog
 
 To me one interesting thing about these results is that they did not seem to agree with some other results I had found online. \href{https://people.csail.mit.edu/alinush/6.867-fall-2013/2013.10.22.w8.tu-lecture-13-generalization-part-2.pdf}{These slides} mentions the growth should be proportional to $\log(d)$, which it is. But \href{http://courses.cms.caltech.edu/cs253/hw/hw2.pdf}{This homework assignment} gives an upper bound on the VC dimension of $2(\log_2(d) + 1)$. 
 
+\subsection{Write a program that finds lower-bounds experimentally and that would even find the
+true VC-dimension given enough time (and a sufficient numerical precision). Provide a
+clear description for (possibly in terms of pseudo code) and reasoning behind the program.
+(Hint: given an arbitrary data set of of size N, you can of course always check if the class
+of decision stumps shatters it.)}
+
+
+
 \bibliographystyle{plain}
 \bibliography{refs}
 
