final code for f

--- a/report/main.tex
+++ b/report/main.tex
@@ -197,7 +197,7 @@ I used the definition from the book \textit{Foundations of Machine Learning} \ci
 
 Since we know the maximum number of different labelings a data set of size $N$ in $d$ dimensions can get by means of decision stumps to be $2Nd$ (Section \ref{sec:2d}), and the total number of possible different labelings of a data set of size $N$ can get is $2^N$ (Section \ref{sec:2a}), we have to find the first case where $2Nd < 2^N$. In other words, find the first $N$ for which the classifier cannot create every possible labeling.
 
-Since I could not find an analytical solution to this I decided to solve it programmatically. The results can be seen in Table \ref{tab:upper-bound-vc}.
+Since I could not find an analytical solution to this I decided to solve it programmatically. The results can be seen in Table \ref{tab:upper-bound-vc}. I've also added results for $d \in \{9, 10, 11, 12\}$ for Section \ref{sec:2e}.
 
 \begin{table*}
     \begin{tabular}{|c|c|}
@@ -211,6 +211,13 @@ Since I could not find an analytical solution to this I decided to solve it prog
     6              & 6                            \\ \hline
     7              & 6                           \\ \hline
     8              & 6                            \\ \hline
+
+    9              & 6                            \\ \hline
+    10              & 7                            \\ \hline
+    11             & 7                            \\ \hline
+    12              & 7                            \\ \hline
+
+    
     1024           & 14                            \\ \hline
     $2^{100}$        & 107 \\
     \hline
@@ -221,11 +228,16 @@ Since I could not find an analytical solution to this I decided to solve it prog
 
 To me one interesting thing about these results is that they did not seem to agree with some other results I had found online. \href{https://people.csail.mit.edu/alinush/6.867-fall-2013/2013.10.22.w8.tu-lecture-13-generalization-part-2.pdf}{These slides} mentions the growth should be proportional to $\log(d)$, which it is. But \href{http://courses.cms.caltech.edu/cs253/hw/hw2.pdf}{This homework assignment} gives an upper bound on the VC dimension of $2(\log_2(d) + 1)$. 
 
+\subsection{Write a program that finds lower-bounds experimentally and that would even find the true VC-dimension given enough time (and a sufficient numerical precision). Provide a clear description for (possibly in terms of pseudo code) and reasoning behind the program. (Hint: given an arbitrary data set of of size N, you can of course always check if the class of decision stumps shatters it.)}
+\label{sec:2f}
+
 \subsection{Write a program that finds lower-bounds experimentally and that would even find the
 true VC-dimension given enough time (and a sufficient numerical precision). Provide a
 clear description for (possibly in terms of pseudo code) and reasoning behind the program.
 (Hint: given an arbitrary data set of of size N, you can of course always check if the class
 of decision stumps shatters it.)}
+\label{sec:2e}
+
 
 
 
