bug fix in program arguments

--- a/report/main.tex
+++ b/report/main.tex
@@ -231,11 +231,11 @@ To me one interesting thing about these results is that they did not seem to agr
 \subsection{Write a program that finds lower-bounds experimentally and that would even find the true VC-dimension given enough time (and a sufficient numerical precision). Provide a clear description for (possibly in terms of pseudo code) and reasoning behind the program. (Hint: given an arbitrary data set of of size N, you can of course always check if the class of decision stumps shatters it.)}
 \label{sec:2f}
 
-\subsection{Write a program that finds lower-bounds experimentally and that would even find the
-true VC-dimension given enough time (and a sufficient numerical precision). Provide a
-clear description for (possibly in terms of pseudo code) and reasoning behind the program.
-(Hint: given an arbitrary data set of of size N, you can of course always check if the class
-of decision stumps shatters it.)}
+Once again the definition from the book \textit{Foundations of Machine Learning} \cite{foundations_of_machine_learning} for the lower-bound on the VC-Dimension is used
+
+\textbf{Upper-bound on VC-dimension}: To give a lower bound, we need to show that a set $S$ of cardinality $N$ can be shattered
+
+\subsection{Determine for every dimensionality $d ∈ \{1, 2, 3, . . . , 10, 11, 12\}$ the true VC-dimension and proof that, indeed, it is the actual VC-dimension for decision stump in spaces of that dimensionality. (Note: please be advised that you are not expected to completely crack this open(?) problem, but do have a go at it and see how far you can get in a reasonable amount of time. Hint: you probably can get some inspiration from the lower-bounds your program from 3.f finds.)}
 \label{sec:2e}
 
 
