switched back to random data generation

--- a/report/main.tex
+++ b/report/main.tex
@@ -238,7 +238,30 @@ Once again the definition from the book \textit{Foundations of Machine Learning}
 \subsection{Determine for every dimensionality $d ∈ \{1, 2, 3, . . . , 10, 11, 12\}$ the true VC-dimension and proof that, indeed, it is the actual VC-dimension for decision stump in spaces of that dimensionality. (Note: please be advised that you are not expected to completely crack this open(?) problem, but do have a go at it and see how far you can get in a reasonable amount of time. Hint: you probably can get some inspiration from the lower-bounds your program from 3.f finds.)}
 \label{sec:2e}
 
+\begin{table*}
+    \begin{tabular}{|c|c|}
+    \hline
+    Dimensionality & Lower-bound on VC-Dimension \\ \hline
+    1              & 2                            \\ \hline
+    2              & 3                            \\ \hline
+    3              &                             \\ \hline
+    4              &                             \\ \hline
+    5              &                             \\ \hline
+    6              &                             \\ \hline
+    7              &                            \\ \hline
+    8              &                             \\ \hline
+    9              &                             \\ \hline
+    10              &                             \\ \hline
+    11             &                            \\ \hline
+    12              &                             \\ \hline
 
+    
+    $2^{100}$        & 107 \\
+    \hline
+    \end{tabular}
+    \caption{Results for experimentally found lower bounds on the VC Dimension}
+    \label{tab:upper-bound-vc}
+\end{table*}
 
 
 \bibliographystyle{plain}
