filled in more of table

--- a/report/main.tex
+++ b/report/main.tex
@@ -244,9 +244,9 @@ Once again the definition from the book \textit{Foundations of Machine Learning}
     Dimensionality & Lower-bound on VC-Dimension \\ \hline
     1              & 2                            \\ \hline
     2              & 3                            \\ \hline
-    3              &                             \\ \hline
+    3              & 4                            \\ \hline
     4              &                             \\ \hline
-    5              &                             \\ \hline
+    5              & 5                            \\ \hline
     6              &                             \\ \hline
     7              &                            \\ \hline
     8              &                             \\ \hline
