--- a/report/main.tex
+++ b/report/main.tex
@@ -242,18 +242,18 @@ Once again the definition from the book \textit{Foundations of Machine Learning}
     \begin{tabular}{|c|c|}
     \hline
     Dimensionality & Lower-bound on VC-Dimension \\ \hline
-    1              & 2                            \\ \hline
+    1              & \textbf{2}                            \\ \hline
     2              & 3                            \\ \hline
-    3              & 4                            \\ \hline
-    4              &                             \\ \hline
-    5              & 5                            \\ \hline
-    6              &                             \\ \hline
-    7              &                            \\ \hline
-    8              &                             \\ \hline
-    9              &                             \\ \hline
-    10              &                             \\ \hline
-    11             &                            \\ \hline
-    12              &                             \\ \hline
+    3              & \textbf{4}                            \\ \hline
+    4              & 4                            \\ \hline
+    5              & \textbf{5}                            \\ \hline
+    6              &    5                         \\ \hline
+    7              & 5                           \\ \hline
+    8              & 5                            \\ \hline
+    9              & 5                            \\ \hline
+    10              & 5                            \\ \hline
+    11             &  5                          \\ \hline
+    12              &  6                           \\ \hline
     \end{tabular}
     \caption{Results for experimentally found lower bounds on the VC Dimension}
     \label{tab:upper-bound-vc}
