--- a/report/main.tex
+++ b/report/main.tex
@@ -13,6 +13,33 @@
 \usepackage[pdftex,linkcolor=black,pdfborder={0 0 0}]{hyperref} % Format links for pdf
 \usepackage{calc} % To reset the counter in the document after title page
 \usepackage{enumitem} % Includes lists
+\usepackage{listings}
+\usepackage{xcolor}
+
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\ttfamily\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2
+}
+\lstset{style=mystyle}
 
 \frenchspacing % No double spacing between sentences
 \linespread{1.2} % Set linespace
@@ -234,7 +261,7 @@ From here it seemed like there was a pattern where for any $N \leq (d+1)$ the pr
 It was not until a day of thinking and researching that I found these \href{https://people.csail.mit.edu/alinush/6.867-fall-2013/2013.10.22.w8.tu-lecture-13-generalization-part-2.pdf}{Slides} (Page 5) that confirmed my original answer.
 
 \subsection{Using the bound from Exercise 3.d, determine the smallest upper-bound on the VC-dimension for decision stumps for dimensionalities $d ∈ \{1, 2, 3, 4, 5, 6, 7, 8, 1024, 2^{100}\}$}
-\label{sec:3e}
+\label{sec:2e}
 I used the definition from the book \textit{Foundations of Machine Learning} \cite{foundations_of_machine_learning} for the upper-bound on the VC-Dimension
 
 \textbf{Smallest upper-bound on VC-dimension}: To give an upper bound, we need to prove that no set $S$ of cardinality $N$ can be shattered
@@ -270,7 +297,7 @@ Since I could not find an analytical solution to this I decided to solve it prog
     \label{tab:upper-bound-vc}
 \end{table*}
 
-To me one interesting thing about these results is that they did not seem to agree with some other results I had found online. \href{https://people.csail.mit.edu/alinush/6.867-fall-2013/2013.10.22.w8.tu-lecture-13-generalization-part-2.pdf}{These slides} mentions the growth should be proportional to $\log(d)$, which it is. But \href{http://courses.cms.caltech.edu/cs253/hw/hw2.pdf}{This homework assignment} gives an upper bound on the VC dimension of $2(\log_2(d) + 1)$. 
+To me one interesting thing about these results is that they did not seem to agree with some other results I had found online. \href{https://people.csail.mit.edu/alinush/6.867-fall-2013/2013.10.22.w8.tu-lecture-13-generalization-part-2.pdf}{These slides} mentions the growth should be proportional to $\log(d)$, which it is. But \href{http://courses.cms.caltech.edu/cs253/hw/hw2.pdf}{This homework assignment} gives an upper=bound on the VC dimension of $2(\log_2(d) + 1)$. I think they might have found an analytical solution to the upper-bound, but in doing so had to slightly increase it.
 
 \subsection{Write a program that finds lower-bounds experimentally and that would even find the true VC-dimension given enough time (and a sufficient numerical precision). Provide a clear description for (possibly in terms of pseudo code) and reasoning behind the program. (Hint: given an arbitrary data set of of size N, you can of course always check if the class of decision stumps shatters it.)}
 \label{sec:2f}
@@ -279,8 +306,65 @@ Once again the definition from the book \textit{Foundations of Machine Learning}
 
 \textbf{Upper-bound on VC-dimension}: To give a lower bound, we need to show that a set $S$ of cardinality $N$ can be shattered
 
+\begin{lstlisting}[language=Python, caption=Can Shatter Method, label={alg:shatter}]
+def can_shatter(dataset):
+    d = len(dataset[0])
+    max_labelings = 2**len(dataset)
+    # both are arrays of size 2
+    min_values = np.min(dataset, axis=0)
+    max_values = np.max(dataset, axis=0)
+
+    found_labels = set()
+    # iterate over dimension, lower_bound, upper_bound
+    iterator = zip(range(d), min_values, max_values)
+    for stump_dimension, start, end in iterator:
+        for stump_boundary in range(start-1, end+1):
+            # anything lower than the stump boundary gets True
+            labeled = dataset[:, stump_dimension] <= stump_boundary
+            found_labels.add(tuple(labeled))
+            # inverse is always achievable
+            found_labels.add(tuple(~labeled))
+            # stop when we found the max number of possible labels:
+            # dataset can be shattered
+            if len(found_labels) == max_labelings:
+                return True
+    return False
+\end{lstlisting}
+
+The code for this can be seen in Algorithm \ref{alg:shatter}. I tried writing it out in pseudo code but this turned out to be almost the exact same as the Python code, so I think it's clearer add the original code with comments.
+
+One thing that's good to explain is how I choose the locations of the decision boundaries. In my code the samples are always on integer coordinates (more on my sampling method later), so by iterating my decision boundary over all possible integers I am sure to get all possible labelings. It is of course not needed to go over every possible integer, so instead for each dimension I choose the decision boundary to be in:
+
+\[ boundary \in \{lower\_bound - 1, lower\_bound, ..., upper\_bound\} \]
+
+Here $lower\_bound$ and $upper\_bound$ are the lowest and highest value found for each dimension in the data set. 
+
+I tried multiple methods of sampling the possible search space. A first question I had was how big should the space be. For example if there is only $3$ samples in $2$ dimensions it seems unneccesary to have these samples be in a space of size $1000x1000$. In some earlier experiments I noticed that for $d \leq 4$ I could find solutions for a space where each dimension has a max size of $d$. So this was often the starting size of my sample space, which I then increased if I thought it was needed.
+
+For the sampling method itself I tried 2 methods, \textit{random} and \textit{enumeration}. A problem I ran into with both methods was the sheer size of the possible number of data sets. If we have $d=3$ and each dimension has a size of $3$ this gives $27$ possible points. Choosing 4 points from this (the upper-bound for $d=3$ found in Section \ref{sec:2e}) gives a total of 17550 possible data sets. This is still easy to enumerate, but the size grows rapidly. For $d=5$ and each dimension having a size of 5 there is $3125$ possible points. Choosing 5 from this gives $2.47e15$ possible data sets. Because the number of possible data sets grows so rapidly I decided to stick with random sampling.
+
+\begin{lstlisting}[language=Python, caption=Dimensionality Check, label={alg:finder}]
+def check_dimensionality(config):
+    d, upper_bound, max_attempts = config
+    # check from highest possible VD dimension first
+    # this was if it is found we can immediately stop
+    iterator = list(range(1, upper_bound+1))[::-1]
+    for N in iterator:
+        attempts = 0
+        for data in generate_random_data(d, N):
+            # just need to find a single dataset that can be shattered
+            if can_shatter(data):
+                print(f'Highest N for dimension {d} is: {N}')
+                return
+            attempts += 1
+            if attempts >= max_attempts:
+                break
+    \end{lstlisting}
+
+Finally Algorithm \ref{alg:shatter} was used in Algorithm \ref{alg:finder} to check multiple data set sizes to find the VC-dimension.
+
 \subsection{Determine for every dimensionality $d ∈ \{1, 2, 3, . . . , 10, 11, 12\}$ the true VC-dimension and proof that, indeed, it is the actual VC-dimension for decision stump in spaces of that dimensionality. (Note: please be advised that you are not expected to completely crack this open(?) problem, but do have a go at it and see how far you can get in a reasonable amount of time. Hint: you probably can get some inspiration from the lower-bounds your program from 3.f finds.)}
-\label{sec:2e}
+\label{sec:2g}
 
 \begin{table*}
     \begin{tabular}{|c|c|}
@@ -300,9 +384,10 @@ Once again the definition from the book \textit{Foundations of Machine Learning}
     12              &  6                           \\ \hline
     \end{tabular}
     \caption{Results for experimentally found lower bounds on the VC Dimension}
-    \label{tab:upper-bound-vc}
+    \label{tab:experiment-lower-bound-vc}
 \end{table*}
 
+I used the method described in Section \ref{sec:2f} to experimentally find lower-bounds on the VC dimension. Results for this can be seen in Table \ref{tab:experiment-lower-bound-vc}. The boldfaced values are where the lower and upper bound match. To find these values I ran tests with the algorithm shown in Algorithm \ref{alg:finder} using 1000000 attempts each time. I varied the size per dimension from $N$ to $4N$.
 
 \bibliographystyle{plain}
 \bibliography{refs}
